<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroActivity">

    <androidx.appcompat.widget.LinearLayoutCompat

        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        tools:context=".CadastroActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Codigo" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:id="@+id/etCodigo"
            android:maxLines="1"
            android:inputType="number"
            android:nextFocusDown="@id/etNome"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nome" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNome"
            android:maxLines="1"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cidade" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:id="@+id/etCidade"
            android:inputType="textCapCharacters"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Estado" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"

            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/Salvar"
                android:id="@+id/btSalvar"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>

